--- a/styles.css
+++ b/styles.css
@@ -214,6 +214,7 @@ footer {
     bottom: 0;
     left: 0;
     width: 100%;
+    height: 30%;
     background: #f0f7ff;
     padding: 1rem;
     display: flex;
